--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -7,13 +7,14 @@
 \usepackage{natbib}
 \usepackage{longtable}
 \usepackage{amsmath, amssymb}
+\usepackage{url}
 %\usepackage[hidelinks,pagebackref]{hyperref} % Handy for links, can comment for plain PDF
 
 \UTyear=2016
 
 \makeindex
 
-\graphicspath{{./Figures/}}
+%\graphicspath{{./Figures/}}
 
 \providecommand{\e}[1]{\ensuremath{\times 10^{#1}}}
 
@@ -211,7 +212,7 @@ x-ray emitters \citep{Gagne1997} and will drown out any companions.
 
 \begin{figure*}[t]
   \centering
-  \includegraphics[width=\columnwidth]{fig1.eps}
+  \includegraphics[width=\columnwidth]{Figures/paper1_fig1.pdf}
   \caption{This figure illustrates the approximate flux ratio limit to
   the detection method outlined in section
   \ref{sec:newmethod}. \emph{Top panel}: Residuals after telluric
@@ -276,7 +277,7 @@ have a peak with high significance at the velocity of the secondary star.
 
 \begin{figure*}[t]
   \centering
-  \includegraphics[width=\columnwidth]{fig2.eps}
+  \includegraphics[width=\columnwidth]{Figures/paper1_fig2.pdf}
   \caption{\emph{Top panel}: The telluric spectrum (absorption due to Earth's
     atmosphere) in the wavelength range from $2290-2400$ nm. Most of the lines are
     from CH$_4$, with a few H$_2$O lines appearing in the right
@@ -391,7 +392,7 @@ detector wavelength setting as one observation.
 
 \begin{figure*}[ht]
   \centering
-  \includegraphics[width=\columnwidth]{fig3.eps}
+  \includegraphics[width=\columnwidth]{Figures/paper1_fig3.pdf}
   \caption{The telluric correction steps for chip three of CRIRES
     wavelength setting $\lambda_{ref} = 2329.3$ nm. \emph{Top panel:}
     Normalized spectrum (black), with the best-fit telluric model
@@ -565,7 +566,7 @@ reject the candidate.
 
 \begin{figure*}[ht]
   \centering
-  \includegraphics[width=\columnwidth]{fig4.eps}
+  \includegraphics[width=\columnwidth]{Figures/paper1_fig4.pdf}
   \caption{Cross-correlation for HIP 26713, using a 5600 K star model spectrum as template. The y-axis is in units of
     the standard deviation of the cross-correlation function. The peak is very near the maximum velocity of $|v_\mathrm{max}| = 256$ km s$^{-1}$, assuming a circular orbit (see equation \ref{eqn:vmax}). The likelihood of observing the system nearly edge on and at a quadrature point, so that $|v| \sim |v_\mathrm{max}|$, is $p \approx 0.01$. However, it is possible that the system has an eccentric orbit, effectively increasing $|v_\mathrm{max}|$.}
   \label{fig:hip26713}
@@ -659,7 +660,7 @@ The mass of the primary star is $9.4 \pm 0.2 M_{\odot}$ \citep
 
 \begin{figure*}[ht]
   \centering
-  \includegraphics[width=5.7in]{fig5.eps}
+  \includegraphics[width=5.7in]{Figures/paper1_fig5.pdf}
   \caption{Cross-correlations for HIP 92855, for all dates observed. A 6100 K star model spectrum is used as the template for each cross-correlation. The y-axis is in units of
     the standard deviation of the cross-correlation function. A single strong peak is seen in the
     cross-correlations from 2007 May 9, 2007 August 2, 2008 September
@@ -703,7 +704,7 @@ follow-up observations.
 
 \begin{figure*}[ht]
   \centering
-  \includegraphics[width=5.5in]{fig6.eps}
+  \includegraphics[width=5.5in]{Figures/paper1_fig6.pdf}
   \caption{Completeness diagram for the full sample of main-sequence B
   stars, split up by the effective temperature of the secondary
   star. The points correspond to the individual stars in the sample,
@@ -771,7 +772,7 @@ that region would be detected. For primary stars with $M < 10 M_{\odot}$, we are
 
 \begin{figure*}[ht]
   \centering
-  \includegraphics[width=\columnwidth]{fig7.eps}
+  \includegraphics[width=\columnwidth]{Figures/paper1_fig7.pdf}
   \caption{Estimates of the binary fraction of B0-B5 stars,
     as a function of binary mass-ratio. This work found no unambiguous companions,
     and so we give $90\%$ upper limits (solid black line). $90\%$
