Updated to use aasjournal style references.

--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -9,6 +9,7 @@
 \usepackage{amsmath, amssymb}
 \usepackage{url}
 %\usepackage[hidelinks,pagebackref]{hyperref} % Handy for links, can comment for plain PDF
+\bibliographystyle{aasjournal}
 
 \UTyear=2016
 
@@ -1173,8 +1174,9 @@ This is a figure.
 
 \cleardoublepage
 \phantomsection
-\addcontentsline{toc}{chapter}{Bibliography}
-\chapter*{Bibliography}
-\lipsum[2]
+%\addcontentsline{toc}{chapter}{Bibliography}
+%\chapter*{Bibliography}
+%\lipsum[2]
+\bibliography{references}
 
 \end{document}
