--- a/utthesis.dtx
+++ b/utthesis.dtx
@@ -87,7 +87,7 @@ and the derived files           utthesis.ins,
 %</internal>
 %<class>
 %<class>\NeedsTeXFormat{LaTeX2e}
-%<class>\ProvidesClass{\jobname}[2014/12/12 v0.2  A class for the UT thesis]
+%<class>\ProvidesClass{utthesis}[2014/12/12 v0.2  A class for the UT thesis]
 %<class>\LoadClass[12pt,oneside]{memoir}
 %<*driver>
 \documentclass{ltxdoc}
