Added papers 2 and 3

--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -58,21 +58,21 @@
 \mainmatter
 
 \chapter{Detection of Low-Mass-ratio Stellar Binary Systems}
-This chapter was previously published \citep{Gullikson2013}. The co-author, Sarah Dodson-Robinson, was my advisor at the time and provided much of the idea for the project.
+This chapter was previously published \citep{Gullikson2013_2}. The co-author, Sarah Dodson-Robinson, was my advisor at the time and provided much of the idea for the project.
 
 \include{paper1}
 
+\chapter{Future Direct Spectroscopic Detection of Hot Jupiters with IGRINS}
+This chapter was previously published \citep{Gullikson2013}. The co-author, Mike Endl, was my co-supervisor at the time and provided much of the inspiration for the work as well as a great deal of technical assistance.
+
+\include{paper2}
+
+\chapter{Correcting for Telluric Absorption: Methods, Case Studies, and Release of the TelFit Code}
+This chapter was previously published \citep{Gullikson2014}. Both co-authors were my advisor at some point while I was developing this code. They helped guide the code requirements and provided a science case study for the work. Adam Kraus provided observational data for the case study.
+
+\include{paper3}
 
 
-\chapter{More}
-\lipsum[3]
-\begin{figure}
-This is a figure.
-\caption[This]{This is a caption.}
-\end{figure}
-
-\chapter{Finishing}
-\lipsum[3]
 
 \begin{appendix}
 
