Add nodata command

--- a/utthesis.dtx
+++ b/utthesis.dtx
@@ -578,6 +578,10 @@ Committee:
 \newcommand\pasa{\ref@jnl{PASA}}%  % Publications of the Astron. Soc. of Australia
 \newcommand\rmxaa{\ref@jnl{Rev. Mexicana Astron. Astrofis.}}%  % Revista Mexicana de Astronomia y Astrofisica
 
+
+% Table commands
+\newcommand\nodata{ ~$\cdots$~ }
+
 %    \end{macrocode}
 %\end{environment}
 %
@@ -587,5 +591,5 @@ Committee:
 %\iffalse
 %</class>
 %\fi
-%\CheckSum{433}
+%\CheckSum{436}
 %\Finale
