--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -72,6 +72,10 @@ This chapter was previously published \citep{Gullikson2014}. Both co-authors wer
 
 \include{paper3}
 
+\chapter{Mining Planet Search Data for Binary Stars: The $\psi^1$ Draconis system}
+This chapter was previously published \citep{Gullikson2015}. The co-authors noticed a trend in the data, and suggested I look into it with the methodology I developed. They obtained the majority of the data used in the work.
+
+\include{paper4}
 
 
 \begin{appendix}
