--- a/references.bib
+++ b/references.bib
@@ -3826,19 +3826,28 @@ archivePrefix = "arXiv",
 
 
 @ARTICLE{Endl2015,
-   author = {{Endl}, M. and {Brugamyer}, E. and {Cochran}, W.~D. and 
-	{MacQueen}, P.~J. and {Robertson}, P. and {Meschiari}, S. and 
-	{Ramirez}, I. and {Shetrone}, M. and {Gullikson}, K. and {Johnson}, M.~C and
-	{Wittenmyer}, R. and {Horner}, J. and {Ciardi}, D. and {Horch}, E. and
-	{Simon}, A.~E. and {Howell}, S.~B. and {Everett}, M. and {Caldwell}, C. and
-	{Castenheira}, B.},
-    title = "{TWO NEW LONG-PERIOD GIANT PLANETS FROM THE MCDONALD OBSERVATORY PLANET SEARCH
-AND TWO STARS WITH LONG-PERIOD RADIAL VELOCITY SIGNALS RELATED TO STELLAR
-ACTIVITY CYCLES}",
+   author = {{Endl}, M. and {Brugamyer}, E.~J. and {Cochran}, W.~D. and {MacQueen}, P.~J. and 
+	{Robertson}, P. and {Meschiari}, S. and {Ramirez}, I. and {Shetrone}, M. and 
+	{Gullikson}, K. and {Johnson}, M.~C. and {Wittenmyer}, R. and 
+	{Horner}, J. and {Ciardi}, D.~R. and {Horch}, E. and {Simon}, A.~E. and 
+	{Howell}, S.~B. and {Everett}, M. and {Caldwell}, C. and {Castanheira}, B.~G.
+	},
+    title = "{Two New Long-period Giant Planets from the McDonald Observatory Planet Search and Two Stars with Long-period Radial Velocity Signals Related to Stellar Activity Cycles}",
   journal = {\apj},
-     year = 2015,
-    pages = {to appear}
+archivePrefix = "arXiv",
+   eprint = {1512.02965},
+ primaryClass = "astro-ph.EP",
+ keywords = {planetary systems, stars: activity, techniques: radial velocities},
+     year = 2016,
+    month = feb,
+   volume = 818,
+      eid = {34},
+    pages = {34},
+      doi = {10.3847/0004-637X/818/1/34},
+   adsurl = {http://adsabs.harvard.edu/abs/2016ApJ...818...34E},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 
 
@@ -4345,6 +4354,26 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
+
+@ARTICLE{Gullikson2015,
+   author = {{Gullikson}, K. and {Endl}, M. and {Cochran}, W.~D. and {MacQueen}, P.~J.
+	},
+    title = "{Mining Planet Search Data for Binary Stars: The {$\psi$}$^{1}$ Draconis system}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1511.01903},
+ primaryClass = "astro-ph.SR",
+ keywords = {binaries: spectroscopic, methods: data analysis, techniques: spectroscopic},
+     year = 2015,
+    month = dec,
+   volume = 815,
+      eid = {62},
+    pages = {62},
+      doi = {10.1088/0004-637X/815/1/62},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...815...62G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 
 
