--- a/paper4.tex
+++ b/paper4.tex
@@ -20,13 +20,29 @@ All data were taken at the 2.7 m Harlan J. Smith Telescope at McDonald observato
 We used the \emph{Austral} code \citep{Endl2000} to measure the differential radial velocity of $\psi^1$ Dra A at each observation by comparing each spectrum to a high signal-to-noise ratio template spectrum of the same star. We provide the raw velocity measurements in Table \ref{tab:rv_data}, as well as the velocities shifted into the system velocity rest frame. The velocity shift necessary to convert from the differential radial velocities to that frame is found in Section \ref{sec:orbit}. Table \ref{tab:rv_data} also gives the measurements of the companion radial velocity (described in the next section).
 
 
-\begin{table}
-  \centering
-  \footnotesize
-  \begin{tabular}{lrrrrrr}
-    \hline
+\begin{small}
+\begin{longtable}{lrrrrrr}
+    
+    \caption{The velocities in the `raw' columns are our actual measurements. Those in the `shifted' columns are shifted into the system velocity rest frame using the results of the orbital fit described in Section \ref{sec:orbit}.} \\
+  \label{tab:rv_data}
+
+    \\ \hline
     Julian Date & \multicolumn{3}{c}{Primary RV (km/s)} & \multicolumn{3}{c}{Secondary RV (km/s)} \\
 & raw & shifted & $\sigma$  & raw & shifted  & $\sigma$ \\ \hline
+    \endfirsthead
+
+    \\ \hline
+    Julian Date & \multicolumn{3}{c}{Primary RV (km/s)} & \multicolumn{3}{c}{Secondary RV (km/s)} \\
+& raw & shifted & $\sigma$  & raw & shifted  & $\sigma$ \\ \hline
+    \endhead
+
+    \hline
+    \endfoot
+
+    \hline
+    \endlastfoot
+
+
  2451809.66 &   1.927 &  -2.174 &   0.013 &  \nodata &  \nodata &  \nodata \\
  2451809.67 &   1.929 &  -2.172 &   0.014 &  \nodata &  \nodata &  \nodata \\
  2452142.68 &   1.841 &  -2.259 &   0.012 &  \nodata &  \nodata &  \nodata \\
@@ -64,25 +80,7 @@ We used the \emph{Austral} code \citep{Endl2000} to measure the differential rad
  2456145.66 &   5.929 &   1.828 &   0.018 &   -11.43 &    -4.19 &     0.79 \\
  2456145.66 &   5.965 &   1.864 &   0.018 &   -11.15 &    -3.91 &     0.79 \\
  2456173.73 &   5.955 &   1.854 &   0.018 &   -10.82 &    -3.48 &     0.75 \\
- 2456401.97 &   6.964 &   2.864 &   0.014 &   -14.11 &    -5.87 &     0.69 \\ \hline
-
-  \end{tabular}
-  \caption{The velocities in the `raw' columns are our actual measurements. Those in the `shifted' columns are shifted into the system velocity rest frame using the results of the orbital fit described in Section \ref{sec:orbit}.}
-  \label{tab:rv_data}
-\end{table}
-
-
-
-
-
-\begin{table}
-  \centering
-  \footnotesize
-  \begin{tabular}{lrrrrrr}
-    \hline
-    Julian Date & \multicolumn{3}{c}{Primary RV (km/s)} & \multicolumn{3}{c}{Secondary RV (km/s)} \\
-& raw & shifted & $\sigma$  & raw & shifted  & $\sigma$ \\ \hline
-
+ 2456401.97 &   6.964 &   2.864 &   0.014 &   -14.11 &    -5.87 &     0.69 \\
  2456401.97 &   6.941 &   2.841 &   0.012 &   -14.39 &    -6.15 &     0.68 \\
  2456433.74 &   7.238 &   3.138 &   0.013 &   -14.54 &    -6.14 &     0.62 \\
  2456433.74 &   7.209 &   3.108 &   0.012 &   -14.61 &    -6.21 &     0.65 \\
@@ -120,11 +118,15 @@ We used the \emph{Austral} code \citep{Endl2000} to measure the differential rad
  2457216.73 &  10.228 &   6.128 &   0.015 &   -25.15 &   -13.69 &     0.80 \\
  2457245.60 &   9.302 &   5.201 &   0.016 &   -22.21 &   -11.52 &     0.77 \\
  2457245.61 &   9.299 &   5.199 &   0.016 &   -21.85 &   -11.16 &     0.72 \\
- 2457248.61 &   9.338 &   5.237 &   0.017 &   -21.66 &   -11.05 &     0.70 \\ \hline
- \end{tabular}
+ 2457248.61 &   9.338 &   5.237 &   0.017 &   -21.66 &   -11.05 &     0.70
 
-\end{table}
- 
+  
+\end{longtable}
+\end{small}
+
+
+
+
  
  
  
