--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -8,6 +8,7 @@
 \usepackage{longtable}
 \usepackage{amsmath, amssymb}
 \usepackage{url}
+\usepackage{subfigure}
 %\usepackage[hidelinks,pagebackref]{hyperref} % Handy for links, can comment for plain PDF
 \bibliographystyle{aasjournal}
 
@@ -76,6 +77,12 @@ This chapter was previously published \citep{Gullikson2014}. Both co-authors wer
 This chapter was previously published \citep{Gullikson2015}. The co-authors noticed a trend in the data, and suggested I look into it with the methodology I developed. They obtained the majority of the data used in the work.
 
 \include{paper4}
+
+
+\chapter{Direct Spectral Detection: An Efficient Method to Detect and Characterize Binary Systems}
+This chapter was previously published \citep{Gullikson2016}. Adam Kraus and Sarah Dodson-Robinson were both my advisors for part of the time that I spent developing the method outlined below. They provided much of the inspiration for the method and technical advice. Daniel Jaffe is the principal investigator for one of the instruments used in this work, the IGRINS spectrograph. The rest of the authors provided data that I used to calibrate the method.
+
+\include{paper5}
 
 
 \begin{appendix}
