Derotated some figures, and put all table captions above the table.

--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -85,21 +85,14 @@ This chapter was previously published \citep{Gullikson2016}. Adam Kraus and Sara
 \include{paper5}
 
 
-\begin{appendix}
+%\begin{appendix}
 
-\chapter{First}
-\lipsum[3]
+%\chapter{First}
+%\lipsum[3]
 
-\chapter{Second}
-\section{Part one}
-\lipsum[3]
-\section{Part two}
-\begin{figure}
-This is a figure.
-\caption[That]{This is also a caption.}
-\end{figure}
+%\chapter{Second}
 
-\end{appendix}
+%\end{appendix}
 
 \backmatter
 
