--- a/paper5.tex
+++ b/paper5.tex
@@ -153,7 +153,7 @@ The typical temperature uncertainty with the DSD method is $\sim 150 - 200$ K, b
 
 The detectability of a companion decreases primarily as the contrast between it and the primary star increases. Rotation plays an important role in the detection rate as well, since the cross-correlation function derives most of its power from narrow spectral features. We follow a similar strategy as above to estimate the detection rate as a function of temperature and rotational velocity for each star, with the key differences that we scale the model spectra to replicate a binary star observation with main sequence observations (rather than scaling the companion to ten times main sequence), and that we add \emph{Phoenix model spectra} for late-type stars to the data instead of real spectra. We use synthetic spectra so that we can use a finer grid of temperatures and rotational broadening and not be limited by the temperatures or the temperature estimation uncertainties of real late-type stars. However, since we are comparing models to models any mismatch between the model spectrum and the real spectrum of a star of that temperature will tend to make the sensitivity calculations somewhat optimistic. This will have the largest impact for very cool stars, where the difficult to model molecular absorption is more important.
 
-For each observed early-type star, we generate several synthetic binary star observations by adding model spectra for stars with $T_\mathrm{eff} = 3000 - 7000$ K in steps of 100 K and rotational velocities $v\sin{i} = 0 - 50$ $\\mathrm{km\ s}^{-1}$ in steps of 10 $\mathrm{km\ s}^{-1}$. For each temperature and $v\sin{i}$ combination, we make 17 independent synthetic observations by adding the model to the data with a radial velocity shift between -400 to 400 $\mathrm{km\ s}^{-1}$ in steps of 50 $\mathrm{km\ s}^{-1}$. We label a companion as detected if the highest peak in the CCF of the synthetic data with the model spectrum of the same temperature is within 5 $\mathrm{km\ s}^{-1}$ (the approximate instrumental broadening) of the correct velocity. 
+For each observed early-type star, we generate several synthetic binary star observations by adding model spectra for stars with $T_\mathrm{eff} = 3000 - 7000$ K in steps of 100 K and rotational velocities $v\sin{i} = 0 - 50$ $\mathrm{km\ s}^{-1}$ in steps of 10 $\mathrm{km\ s}^{-1}$. For each temperature and $v\sin{i}$ combination, we make 17 independent synthetic observations by adding the model to the data with a radial velocity shift between -400 to 400 $\mathrm{km\ s}^{-1}$ in steps of 50 $\mathrm{km\ s}^{-1}$. We label a companion as detected if the highest peak in the CCF of the synthetic data with the model spectrum of the same temperature is within 5 $\mathrm{km\ s}^{-1}$ (the approximate instrumental broadening) of the correct velocity. 
 
 The median detection rate for targets in Table \ref{tab:known} is shown in Figure \ref{fig:sensitivity_2d}\footnote{A file with the results of the sensitivity analysis, as well as sensitivity figures similar to Figure \ref{fig:sensitivity_2d} for each individual target, are available at this url: \url{https://github.com/kgullikson88/DSD-Paper}}. We can usually detect very cool stars if they are slowly rotating, but the sensitivity quickly degrades as the companion $v\sin{i}$ increases. Cool stars spin down as they age \citep{Barnes2003} so the rotation speed dependence is equivalent to an age dependence. We estimate the impact of rotation on our detection method by using the gyrochronology relation given in \cite{Barnes2010b}: 
 
